--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Aprendendo nodejs ",
   "main": "index.js",
   "scripts": {
-    "start": "npm index"
+    "start": "node index"
   },
   "author": "Christian Figueiredo",
   "license": "ISC",
