--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Aprendendo nodejs ",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "author": "Christian Figueiredo",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "ejs": "^3.1.6",
+    "express": "^4.17.2",
+    "nodemon": "^2.0.15"
   }
 }
